# backup-tool

./: .gitignore  README.md  installer.nsi  pyproject.toml  requirements.txt
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml
backup_tool/: backup.py  cli.py  win_utils.py
docs/: usage.md
macos/: Info.plist
